# Studies

./: README.md
Databases and controls/Lab1/: DB_Lab1_Buhaiov_84.docx  readme.md
Databases and controls/Lab2/: README.md  db_operations.h  main.cpp  psql_getters.cpp  psql_getters.h  submenu.cpp
Databases_and_controls/Lab1/: DB_Lab1_Buhaiov_84.docx  readme.md
Databases_and_controls/Lab2/: CMakeLists.txt  README.md  db_operations.cpp  db_operations.h  psql_getters.cpp  psql_getters.h  submenu.cpp  submenu.h
Databases_and_controls/Lab3/: CMakeLists.txt  database.h  driver.cpp  orm_classes.h  readme.md  server_context.h  submenu.cpp  submenu.h
Web_design/Lab1/: README.md  about.html  profile.html
Web_design/Lab2/: README.md
Web_design/Lab2/html/: about.html
Web_design/Lab2/js/: controller.js  main.js  model.js  view.js
Web_design/Lab3/: README.md
Web_design/Lab3/client/html/: about.html
